--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         - uses: actions/checkout@v4
         - name: Setup cmake
           run: |
-             cmake --versions
+             cmake --version
         - name: Configure
           run: |
              cmake -B build -G "Visual Studio 17 2022" -A x64
